change relative path to img for real this time

--- a/syshard.css
+++ b/syshard.css
@@ -5,7 +5,7 @@ body
 
 div.image
 {
-    background-image: url(/mexican-wolf-trance.github.io/img/syshardimg.jpg);
+    background-image: url(/img/syshardimg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
