--- a/syshard.css
+++ b/syshard.css
@@ -4,7 +4,7 @@ body
 }
 
 div.image {
-    background-image: url(/img/syshardimg.JPG);
+    background-image: url(img/syshardimg.JPG);
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
@@ -23,5 +23,19 @@ button
 {
     padding: 15px 35px;
     background-color: black;
+    color: white;
+}
+
+button:hover
+{
+    background-color: #ddd;
+    color: black;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.active
+{
+    background-color: #4CAF50;
     color: white;
 }
