--- a/syshard.css
+++ b/syshard.css
@@ -3,14 +3,20 @@ body
     font-family: Helvetica, Arial, sans-serif;
 }
 
-div.image {
+div.image 
+{
     background-image: url(img/syshardimg.JPG);
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
 }
+div.slide
+{
+    min-height: 500px;
+}
 
-.header {
+.header 
+{
     border-style: none none solid none;
     padding: 20px 20px;
     height: auto;
@@ -25,6 +31,11 @@ button
     background-color: black;
     color: white;
 }
+li.size
+{
+    font-size: 20px;
+    margin: 0px 20px 40px 20px;
+}
 
 button:hover
 {
@@ -33,32 +44,36 @@ button:hover
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
 }
-#myNavbar
+.mynavbar .nav li 
 {
-    text-align: center;
+    display: inline-block;
+    float: none;
+    margin: 0 20px;
+    vertical-align: middle;
 }
+* { box-sizing: border-box }
 
-* {
-    box-sizing: border-box
-}
-
-.mySlides {
+.mySlides 
+{
     display: none;
 }
 
-img {
+img 
+{
     vertical-align: middle;
 }
 
 /* Slideshow container */
-.slideshow-container {
+.slideshow-container 
+{
     max-width: 1000px;
     position: relative;
     margin: auto;
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev, .next 
+{
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -73,18 +88,21 @@ img {
 }
 
 /* Position the "next button" to the right */
-.next {
+.next 
+{
     right: 0;
     border-radius: 3px 0 0 3px;
 }
 
     /* On hover, add a black background color with a little bit see-through */
-    .prev:hover, .next:hover {
+    .prev:hover, .next:hover 
+    {
         background-color: rgba(0,0,0,0.8);
     }
 
 /* Caption text */
-.text {
+.text 
+{
     color: #f2f2f2;
     font-size: 15px;
     padding: 8px 12px;
@@ -95,7 +113,8 @@ img {
 }
 
 /* Number text (1/3 etc) */
-.numbertext {
+.numbertext 
+{
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
@@ -104,7 +123,8 @@ img {
 }
 
 /* The dots/bullets/indicators */
-.dot {
+.dot 
+{
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -115,41 +135,51 @@ img {
     transition: background-color 0.6s ease;
 }
 
-    .active, .dot:hover {
+    .active, .dot:hover 
+    {
         background-color: #717171;
     }
 
 /* Fading animation */
-.faded {
+.faded 
+{
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
 }
 
-@-webkit-keyframes fade {
-    from {
+@-webkit-keyframes fade 
+{
+    from 
+    {
         opacity: .4
     }
 
-    to {
+    to 
+    {
         opacity: 1
     }
 }
 
-@keyframes fade {
-    from {
+@keyframes fade 
+{
+    from 
+    {
         opacity: .4
     }
 
-    to {
+    to 
+    {
         opacity: 1
     }
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-    .prev, .next, .text {
+@media only screen and (max-width: 300px) 
+{
+    .prev, .next, .text 
+    {
         font-size: 11px
     }
 }
