add image behind slideshow

--- a/syshard.css
+++ b/syshard.css
@@ -10,9 +10,16 @@ div.image
     background-repeat: no-repeat;
     height: 300px;
 }
+div.image2 {
+    background-image: url(img/kaspimg.JPG);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 500px;
+}
 div.slide
 {
     min-height: 500px;
+    background-color: white;
 }
 
 .header 
@@ -80,7 +87,7 @@ img
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    color: black;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
