--- a/syshard.css
+++ b/syshard.css
@@ -23,6 +23,14 @@ div.xkcd {
     height: 500px;
 
 }
+div.info {
+    background-image: url(img/infograph.PNG);
+    background-size: contain;
+    background-position: top center;
+    background-repeat: no-repeat;
+    margin-top: 20px;
+    height: 550px;
+}
 div.slide
 {
     min-height: 600px;
@@ -32,15 +40,24 @@ div.questions
 {
     background-color: white;
 }
+
+div.button
+{
+    padding-top: 20px;
+}
+
 .header 
 {
     border-style: none none solid none;
     padding: 20px 20px;
     height: auto;
 }
-div.button
+
+.scary 
 {
-    padding-top: 20px;
+    font-family: 'Butcherman', cursive, Helvetica, Arial, sans-serif;
+    font-size: 150px;
+    margin-top: 90px;
 }
 
 li.size 
@@ -66,6 +83,11 @@ button:hover
     color: black;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+}
+button:focus
+{
+    background-color: #ddd;
+    color: black;
 }
 
 .center 
