--- a/syshard.css
+++ b/syshard.css
@@ -12,7 +12,7 @@ div.image
 }
 div.image2 {
     background-color: black;
-    min-height: 500px;
+    height: 700px;
 }
 div.xkcd {
     background-image: url(img/xkcd.JPG);
@@ -33,7 +33,7 @@ div.info {
 }
 div.slide
 {
-    min-height: 600px;
+    height: 650px;
     background-color: white;
 }
 div.questions
@@ -100,7 +100,7 @@ button:focus
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    width: 50%;
 }
 
 .mynavbar .nav li 
