--- a/syshard.css
+++ b/syshard.css
@@ -103,6 +103,13 @@ button:focus
     width: 50%;
 }
 
+.center2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
 .mynavbar .nav li 
 {
     display: inline-block;
