--- a/syshard.css
+++ b/syshard.css
@@ -110,6 +110,19 @@ button:focus
     width: 90%;
 }
 
+.videowrapper {
+    float: none;
+    clear: both;
+    width: 700px;
+    <-- Added--> position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+    margin: 0 auto;
+    <-- Added--> max-width: 100%;
+    <-- Added-->
+}
+
 .mynavbar .nav li 
 {
     display: inline-block;
