--- a/website.css
+++ b/website.css
@@ -10,7 +10,7 @@ body
 header
 {
     border-style: none none solid none;
-    background-image: url(/mexican-wolf-trance.github.io/img/cybersec.jpg);
+    background-image: url(img/cybersec.jpg);
     background-size: 100% 300px;
     background-position: top center;
     height: 200px;
@@ -56,7 +56,7 @@ p
 }
 .regimg
 {
-    background-image: url("/mexican-wolf-trance.github.io/img/hack.jpg");
+    background-image: url(img/hack.jpg);
     background-size: 300px 300px;
     height: 300px;
     width: 300px;
@@ -184,13 +184,13 @@ label
 {
     color: red;
     border-color: red;
-    font-size: 11px;
+    /*font-size: 11px;*/
 }
 .correctInput
 {
     color: green;
     border-color: green;
-    font-size: 11px;
+    /*font-size: 11px;*/
 }
 table
 {
